public class capCalculator {

    public capCalculator() {

    }

<<<<<<< HEAD
    public void myOwnMethod(){

    }

=======
    public void someRandomMethod() {

    }

    public void randomMethod2() {
        
    }

>>>>>>> d79df2fd6226aef075f882208d2f0bfe40c2d17c
}
