package seedu.allinonenus;

public class AllinOneNus {

    public static void main(String[] args) {

        assert false : "assertion successful";
        new OverallParser().run();
    }

}