package seedu.duke;

public class ModulePlanner {
}
