@startuml

hide members
hide circle

class AllinOneNus
class OverallParser

class TeamPlanner
class FoodRecommendation
class ModulePlanner
class CapCalculator

AllinOneNus--> OverallParser
OverallParser --> TeamPlanner
OverallParser --> CapCalculator
OverallParser --> FoodRecommendation
OverallParser --> ModulePlanner

@enduml
